<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_food"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:scaleType="centerCrop"
            app:civ_border_color="#8C8C8C"
            app:civ_border_width="2dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/hint_name"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_label_name"
                android:layout_marginLeft="10dp"
                android:text="@string/default_name_food"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_label_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/hint_cost"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_label_cost"
                android:layout_marginLeft="10dp"
                android:text="@string/default_cost"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_cost"
                android:layout_marginRight="5dp"
                android:text="@string/btn_add"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>