<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kmitl.it13.millibear.eatallday.controller.activity.AddFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="3.4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_food"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_screen_v1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/ic_equal"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/ic_equal" />

        <EditText
            android:id="@+id/et_cost"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_cost"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/currency"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.8"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.5"
            android:background="@drawable/border_style"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            android:maxLength="500"
            android:maxLines="20"
            android:padding="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.35"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_cancel"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/btn_add"
            android:textSize="18sp"
            android:layout_weight="1" />


    </LinearLayout>

</LinearLayout>